--- a/overlays/staging/kustomization.yaml
+++ b/overlays/staging/kustomization.yaml
@@ -9,6 +9,10 @@ configMapGenerator:
 - envs:
   - .env.config
   name: getting-started
+secretGenerator:
+- envs:
+  - .env.superSecret
+  name: getting-started
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 images:
