--- a/overlays/production/ingress.yaml
+++ b/overlays/production/ingress.yaml
@@ -3,7 +3,8 @@ kind: Ingress
 metadata:
   name: getting-started
   annotations:
-    cert-manager.io/cluster-issuer: "letsencrypt-staging"
+    kubernetes.io/ingress.class: "nginx"
+    cert-manager.io/cluster-issuer: "letsencrypt-prod"
 spec:
   tls:
   - hosts:
