--- a/overlays/staging/ingress.yaml
+++ b/overlays/staging/ingress.yaml
@@ -3,7 +3,8 @@ kind: Ingress
 metadata:
   name: getting-started
   annotations:
-    cert-manager.io/cluster-issuer: "letsencrypt-staging"
+    kubernetes.io/ingress.class: "nginx"
+    cert-manager.io/cluster-issuer: "letsencrypt-prod"
 spec:
   tls:
   - hosts:
@@ -19,3 +20,4 @@ spec:
             port:
               number: 8000
         pathType: ImplementationSpecific
+
