--- a/overlays/staging/kustomization.yaml
+++ b/overlays/staging/kustomization.yaml
@@ -11,11 +11,11 @@ configMapGenerator:
   name: getting-started
 secretGenerator:
 - envs:
-  - .env.superSecret
+  - .env.super-secret
   name: getting-started
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 images:
 - name: tuuli/getting-started
   newName: tuuli/getting-started
-  newTag: test1
+  newTag: 00688b2
