--- a/overlays/production/kustomization.yaml
+++ b/overlays/production/kustomization.yaml
@@ -5,13 +5,10 @@ resources:
 - ../../base
 - ingress.yaml
 - namespace.yaml
+- sealed-secret.yaml
 configMapGenerator:
 - envs:
   - .env.config
-  name: getting-started
-secretGenerator:
-- envs:
-  - .env.super-secret
   name: getting-started
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
